--- a/templates/map.html
+++ b/templates/map.html
@@ -1,8 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-    <script src="./zip_data.js"></script>
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <style>
       #map{
         height: 500px;
