--- a/templates/map.html
+++ b/templates/map.html
@@ -9,6 +9,7 @@
     </style>
   </head>
   <body>
+    <div data-model-results="">
     <div id="map"></div>
     <script type='text/javascript'>
       var map = L.map('map').setView([37.755, -122.44], 12);
