--- a/templates/map.html
+++ b/templates/map.html
@@ -12,6 +12,7 @@
     <div data-model-results="">
     <div id="map"></div>
     <script type='text/javascript'>
+      var zipStylings = {{ data }};
       var map = L.map('map').setView([37.755, -122.44], 12);
 
       L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
